updated about section and change navigation background color

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 <!-- About Section -->
 <section class="about" id="about">
     <div class="container">
-        <!-- <h2 class="primary-heading-dark-grey text-align-center">Mobile Headlight Service</h2>
-        <h4 class="tertiary-heading-secondary text-align-center">Restoration</h4> -->
+        <h2 class="primary-heading-dark-grey text-align-center">Mobile In Los Angeles</h2>
+        <h4 class="tertiary-heading-secondary text-align-center">Headlights</h4>
         <!-- <div class="about-box">
             <div class="about-text">
                 <h2 class="secondary-heading-dark-grey margin-bottom-2">Bright & Clear</h2>
@@ -179,7 +179,7 @@
                 </div>
             </div>
             <div class="about-image">
-                <img src="img/car-headlight.jpg" alt="image">
+                <img src="img/car-headlight2.jpg" alt="image">
             </div>
         </div>
     </div>
